Fix API module to return exactly same data as API response (#241)
Before API module unintentionally converted a dict response to a list, and list contained only keys from original API response. Actual values were not returned.

--- a/tests/integration/targets/api/tasks/02_corner_cases.yml
+++ b/tests/integration/targets/api/tasks/02_corner_cases.yml
@@ -13,7 +13,8 @@
 - ansible.builtin.assert:
     that:
       - ping_result is not changed
-      - ping_result.record.0 == "status"
+      - ping_result.record.status is defined
+      - ping_result.record.status == "Active"
 
 - name: Get HC3 Node
   scale_computing.hypercore.api:
