CI use LANG=C.UTF-8 for integration tests
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -38,6 +38,7 @@ env:
   # ansible-test needs special directory structure.
   # WORKDIR is a subdir of GITHUB_WORKSPACE
   WORKDIR: work-dir/ansible_collections/scale_computing/hypercore
+  LANG: C.UTF-8
 # Run only one workflow for specific branch.
 concurrency:
   group: ${{ github.ref_name }}
