CI extend vm_clone tests
Make sure we can differentiate VM created from 2nd and
VM created from 3rd snapshot.
Different CPU and disk count should be sufficient.

Also sort vm_snapshot_info output by timestamp before using it.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
+++ b/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
@@ -24,12 +24,10 @@
     task_tag: "{{ set_to_run_task.record }}"
   when: set_to_run_task.record | default("")
 
-- name: Delete XLAB-vm_clone-CI_test
+- name: Delete VM XLAB-vm_clone-xyz
   scale_computing.hypercore.vm:
     vm_name: "{{ item }}"
     state: absent
-    memory: 536870912
-    vcpu: 2
   loop:
     - XLAB-vm_clone-CI_test
     - XLAB-vm_clone-CI_test-running
