--- a/changelogs/changelog.yaml
+++ b/changelogs/changelog.yaml
@@ -212,3 +212,39 @@ releases:
       name: virtual_disk_info
       namespace: ''
     release_date: '2023-05-09'
+  1.3.0:
+    changes:
+      bugfixes:
+      - Convert SC_TIMEOUT environ variable to float, thus resolving inventory parse
+        error when SC_TIMEOUT was defined. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/231)
+      - This fix now handles case if no update_status.json exists yet. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/174)
+      major_changes:
+      - Added a role for checking if local time is within required time interval.
+        (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/167)
+      - Added a role for updating single-node systems. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/136)
+      - Added version_update, version_update_info and version_update_status_info module.
+        (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/135)
+      - Added virtual_disk module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/153)
+      - Added virtual_disk_attach module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/212)
+      - Added vm_snapshot module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/217)
+      - Added vm_snapshot_info module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/166)
+      minor_changes:
+      - Added option select to version_update_info module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/189)
+      - Added preserve_mac_address option to vm_clone module. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/187)
+      - Added snapshot cloning to vm_clone. (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/219)
+      - Extend vm and vm_info modules output with replication_source_vm_uuid field.
+        (https://github.com/ScaleComputing/HyperCoreAnsibleCollection/pull/185)
+    fragments:
+    - check_local_time_role.yml
+    - hypercore_inventory_bugfix.yml
+    - version_update.yml
+    - version_update_info_add_option.yml
+    - version_update_single_node_role.yml
+    - version_update_status_info_bugfix.yml
+    - virtual_disk_attach_module.yml
+    - virtual_disk_module.yml
+    - vm_clone.yml
+    - vm_clone_snapshot.yml
+    - vm_info_module.yml
+    - vm_snapshot_modules.yml
+    release_date: '2023-07-07'
