--- a/ci-infra/docker-image/Dockerfile
+++ b/ci-infra/docker-image/Dockerfile
@@ -9,7 +9,8 @@ ARG ANSIBLE_CORE_VERSION
 
 ENV LANG=en_US.UTF-8
 
-RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq sudo procps
+RUN apt update && apt install -y git make smbclient genisoimage qemu-utils jq sudo procps locales
+RUN sed -i '/en_US.UTF-8/s/^# //' /etc/locale.gen && locale-gen
 RUN pip install --upgrade pip wheel
 
 COPY all.requirements /code/ci-infra/docker-image/
