--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
           fail_on_unmatched_files: true
           generate_release_notes: true
 
-  publish:
+  publish-collection:
     needs: release
     runs-on: ubuntu-latest
     steps:
@@ -61,3 +61,7 @@ jobs:
         uses: ansible/ansible-publish-action@v1.0.0
         with:
           api_key: ${{ secrets.GALAXY_API_KEY }}
+
+  publish-docs:
+    needs: release
+    uses: ./.github/workflows/static.yml
