--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,6 +8,8 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+  # To allow triggering from other workflows e.g. the release workflow
+  workflow_call:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
