--- a/roles/version_update_single_node/tasks/update_status_check.yml
+++ b/roles/version_update_single_node/tasks/update_status_check.yml
@@ -9,6 +9,12 @@
           else version_update_single_node_retry_count | int + 1
           }}"
 
+    # We might be able to remove this task
+    - name: Pause before checking update status - checks will report FAILED-RETRYING until update COMPLETE/TERMINATED
+      ansible.builtin.wait_for:
+        timeout: 60
+      delegate_to: localhost
+
     - name: Check update status - will report FAILED-RETRYING until update COMPLETE/TERMINATED
       scale_computing.hypercore.version_update_status_info:
       register: version_update_single_node_update_status
