--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -62,6 +62,7 @@ jobs:
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
+          - https://10.5.11.202 # HC 9.3.x
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -178,7 +179,7 @@ jobs:
       # ${{ env.WORKDIR }} cannot be used
       - uses: ./work-dir/ansible_collections/scale_computing/hypercore/.github/actions/make-integ-config
         with:
-          sc_host: https://10.5.11.201
+          sc_host: https://10.5.11.202
           sc_password_50: ${{ secrets.CI_CONFIG_HC_IP50_SC_PASSWORD }}
           smb_password: ${{ secrets.CI_CONFIG_HC_IP50_SMB_PASSWORD }}
           oidc_client_secret: ${{ secrets.OIDC_CLIENT_SECRET }}
@@ -217,6 +218,7 @@ jobs:
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
+          - https://10.5.11.202
         include:
           - sc_host: https://10.5.11.50
             test_name: vm_replication
@@ -232,9 +234,13 @@ jobs:
             test_name: vm_replication
           - sc_host: https://10.5.11.201
             test_name: vm_replication
+          - sc_host: https://10.5.11.202
+            test_name: vm_replication
           - sc_host: https://10.5.11.200
             test_name: vm_clone__replicated
           - sc_host: https://10.5.11.201
+            test_name: vm_clone__replicated
+          - sc_host: https://10.5.11.202
             test_name: vm_clone__replicated
           # Seem as VSNS nodes cannot open remote tunnel.
           # Code/port that worked (was opened, then closed) on real HyperCode
@@ -242,6 +248,8 @@ jobs:
           - sc_host: https://10.5.11.200
             test_name: support_tunnel
           - sc_host: https://10.5.11.201
+            test_name: support_tunnel
+          - sc_host: https://10.5.11.202
             test_name: support_tunnel
     steps:
       - name: Checkout
@@ -299,6 +307,7 @@ jobs:
         sc_host:
           - https://10.5.11.200
           - https://10.5.11.201
+          - https://10.5.11.202
         exclude:
           # role cluster_config can be used with HC3 9.1, but you need to omit cluster_name setting.
           # CI job role_cluster_config does try to set cluster_name, so it would fail.
