CI Fix test DR cluster cleanup
CI tests were creating VMs with tag Xlab, but without tag CI.

Also, remove only VMs older that N days (N=2). Then we can run cleanup
in parallel with the tests.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -339,9 +339,7 @@ jobs:
       - run: ansible-test integration --local ${{ matrix.test_name }}
 
   replica_cleanup:
-    needs:
-      - integ
-      - integ-seq
+    needs: []
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:8
     env:
