CI remove files on SMB server if they are not from this month
Now we can run cleanup in parallel with SMB import/export tests.
Problem could happen near 30/31/1 of month.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/.github/workflows/integ-test.yml
+++ b/.github/workflows/integ-test.yml
@@ -366,9 +366,7 @@ jobs:
       - run: ansible-playbook tests/integration/cleanup/ci_replica_cleanup.yml
 
   smb_cleanup:
-    needs:
-      - integ
-      - integ-seq
+    needs: []
     runs-on: [self-hosted2]
     container: quay.io/justinc1_github/scale_ci_integ:8
     defaults:
