CI speedup i_vm_params test
Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/i_vm_params/tasks/main.yml
+++ b/tests/integration/targets/i_vm_params/tasks/main.yml
@@ -64,6 +64,7 @@
       power_state: stop
       snapshot_schedule: "{{ snapshot_schedule.record[0].name }}"
       force_reboot: True
+      shutdown_timeout: 10
     register: output
   - ansible.builtin.assert:
       that:
