--- a/.github/workflows/files/ansible-test-units-matrix.yml
+++ b/.github/workflows/files/ansible-test-units-matrix.yml
@@ -39,3 +39,10 @@
   python: "3.10"
 - ansible: "stable-2.15"
   python: "3.11"
+
+- ansible: "stable-2.16"
+  python: "3.10"
+- ansible: "stable-2.16"
+  python: "3.11"
+- ansible: "stable-2.16"
+  python: "3.12"
