Allow vtpm disk type
Test git_issue_12 is split into smaller tests - one per machine type.

Fixes #283

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/git_issue_12/tasks/main.yml
+++ b/tests/integration/targets/git_issue_12/tasks/main.yml
@@ -6,4 +6,8 @@
     SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
-    - include_tasks: issue_12_machine_types.yml
+    - include_tasks: 00_cleanup.yml
+    - include_tasks: 01_machine_type_bios.yml
+    - include_tasks: 02_machine_type_uefi.yml
+    - include_tasks: 03_machine_type_uefi_vtpm.yml
+    - include_tasks: 00_cleanup.yml
