Test vm_nic also on running VM
Bug - VM is not get booted back.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/tests/integration/targets/vm_nic/tasks/main.yml
+++ b/tests/integration/targets/vm_nic/tasks/main.yml
@@ -1,279 +1,18 @@
 ---
+# Test vm_nic module with:
+#  - stopped and running VM.
+
 - environment:
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
     SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
     SC_TIMEOUT: "{{ sc_timeout }}"
+  vars:
+#     vm_name_a: "vm-disk--remove-disk--a"
+#     vm_names_all:
+#       - "{{ vm_name_a }}"
+     shutdown_timeout: 3
 
   block:
-# ----------------------------------Cleanup--------------------------------------------------------------------------------
-
-    - name: Delete XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm: &delete-XLAB-vm_nic_CI_test
-        vm_name: XLAB-vm_nic_CI_test_a
-        state: absent
-      register: result
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Create XLAB-vm_nic_CI_test
-      scale_computing.hypercore.api:
-        action: post
-        endpoint: /rest/v1/VirDomain
-        data:
-          dom:
-            name: XLAB-vm_nic_CI_test_a
-            tags: Xlab,CI,test,vm_nic
-            mem: 512100100
-            numVCPU: 2
-          options:
-            attachGuestToolsISO: False
-      register: vm_created
-    - ansible.builtin.assert:
-        that:
-          - vm_created is succeeded
-          - vm_created is changed
-
-    - name: Create Nic in XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 1
-            type: RTL8139
-          - vlan: 2
-            type: virtio
-        state: set        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
-
-    - name: Retrieve all Nics on XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic_info: &Retrieve-all-Nics-on-demo-vm
-        vm_name: XLAB-vm_nic_CI_test_a
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 2
-          - output.records.0.vlan == 1
-          - output.records.0.type == 'RTL8139'
-          - output.records.1.vlan == 2
-          - output.records.1.type == 'virtio'
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Create Nic in XLAB-vm_nic_CI_test Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 1
-            type: RTL8139
-          - vlan: 2
-            type: virtio
-        state: set   
-      register: output
-    - debug:
-        var: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Delete Nic in XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 2
-            type: virtio
-        state: absent
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
-  
-    - name: Retrieve all Nics on demo-vm
-      scale_computing.hypercore.vm_nic_info: *Retrieve-all-Nics-on-demo-vm
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 1
-          - output.records.0.vlan == 1
-          - output.records.0.type == 'RTL8139'
-          - output is not changed
-
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Delete Nic in XLAB-vm_nic_CI_test Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 2
-            type: virtio
-        state: absent
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Create Nic on vlan 2 in XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 2
-            type: virtio
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
-
-    - name: Retrieve all Nics on XLAB-vm_nic_CI_test 2nd pass
-      scale_computing.hypercore.vm_nic_info: *Retrieve-all-Nics-on-demo-vm
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 2
-          - output.records.0.vlan == 1
-          - output.records.0.type == 'RTL8139'
-          - output.records.1.vlan == 2
-          - output.records.1.type == 'virtio'
-          - output is not changed
-
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Create Nic on vlan 2 in XLAB-vm_nic_CI_test Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 2
-            type: virtio
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Update Nic on vlan1 in XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 1
-            type: virtio
-            vlan_new: 10
-            mac_new: '01:23:45:67:89:AB'
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
-
-    - name: Retrieve all Nics on demo-vm
-      scale_computing.hypercore.vm_nic_info: *Retrieve-all-Nics-on-demo-vm
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 2
-          - output.records.0.vlan == 10
-          - output.records.0.type == 'virtio'
-          - output.records.0.mac == '01:23:45:67:89:AB'
-          - output.records.1.vlan == 2
-          - output.records.1.type == 'virtio'
-          - output is not changed
-
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Update Nic on vlan1 in XLAB-vm_nic_CI_test Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - vlan: 1
-            type: virtio
-            vlan_new: 10
-            mac_new: '01:23:45:67:89:AB'
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Delete all Nics in XLAB-vm_nic_CI_test successful
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items: []
-        state: set        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is succeeded
-          - output is changed
-
-    - name: Retrieve all Nics on demo-vm
-      scale_computing.hypercore.vm_nic_info: *Retrieve-all-Nics-on-demo-vm
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 0
-          - output is not changed
-
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Delete all Nics in XLAB-vm_nic_CI_test successful Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items: []
-        state: set        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Job-------------------------------------------------------------------------------------
-
-    - name: Create Nic on vlan default 0, without specifying vlan in XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - type: virtio
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
-  
-    - name: Retrieve all Nics on demo-vm
-      scale_computing.hypercore.vm_nic_info: *Retrieve-all-Nics-on-demo-vm
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output.records | length == 1
-          - output.records.0.vlan == 0
-          - output.records.0.type == 'virtio'
-          - output is not changed
-
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-
-    - name: Create Nic on vlan default 0, without specifying vlan in XLAB-vm_nic_CI_test Idempotence
-      scale_computing.hypercore.vm_nic:
-        vm_name: XLAB-vm_nic_CI_test_a
-        items:
-          - type: virtio
-        state: present        
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is not changed
-
-# ----------------------------------Cleanup----------------------------------------------------------------------------------
-
-    - name: Delete XLAB-vm_nic_CI_test
-      scale_computing.hypercore.vm: *delete-XLAB-vm_nic_CI_test
-      register: output
-    - ansible.builtin.assert:
-        that:
-          - output is changed
+    - include_tasks: 01_vm_nic_stopped.yml
+    - include_tasks: 02_vm_nic_running.yml
