--- a/tests/integration/targets/vm__remove_disk/tasks/03_remove_disk_running_with_reboot.yml
+++ b/tests/integration/targets/vm__remove_disk/tasks/03_remove_disk_running_with_reboot.yml
@@ -1,4 +1,8 @@
 ---
+- name: Show test parameters
+  ansible.builtin.debug:
+    msg: disk_type={{ disk_type }} expected_vm_reboot={{ expected_vm_reboot }}
+
 # ------------------------------------------------------------------------------------------------------------------
 # Cleanup
 
